--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                             <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
+                    <button class="btn btn-outline-secondary ms-3 position-relative" type="button" data-bs-toggle="offcanvas" data-bs-target="#cartOffcanvas" aria-controls="cartOffcanvas">
+                        <i class="bi bi-cart-fill"></i>
+                        <span id="cart-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">0</span>
+                    </button>
                 </div>
             </div>
         </nav>
@@ -201,5 +205,6 @@
     <!-- Scripts de Bootstrap (Al final del body) -->
     <!-- CORRECCIÓN: Arreglado 'xintegrity' a 'integrity' -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="logic.js"></script>
 </body>
 </html>
