arreglo de imagen 12-11-25

--- a/menu.html
+++ b/menu.html
@@ -126,7 +126,7 @@
                 </div>
                 <div class="modal-body">
                     <!-- TEXTO DE EMPRESA REAL -->
-                    <img src="img/meow-cha.jpg" loading="lazy" class="img-fluid rounded mb-3 img-cover" alt="Detalle de Matcha">
+                    <img src="img/Meow-cha.jpg" loading="lazy" class="img-fluid rounded mb-3 img-cover" alt="Detalle de Matcha">
                     <p>Nuestro Meow-cha Latte es una obra de arte. Utilizamos matcha ceremonial importado directamente de Uji, Japón, conocido por su vibrante color verde y su sabor suave y sin amargura.</p>
                     <h6>Beneficios:</h6>
                     <ul>
