Fix image source case sensitivity in menu.html
arreglo imagen menu principal

--- a/menu.html
+++ b/menu.html
@@ -97,7 +97,7 @@
                 <!-- REQUISITO: Enlace a detalle (usando un modal de Bootstrap) -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
-                        <img src="img/Meow-cha.jpg" loading="lazy" class="card-img-top img-cover" alt="Matcha Latte">
+                        <img src="img/meow-cha.jpg" loading="lazy" class="card-img-top img-cover" alt="Matcha Latte">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">Meow-cha Latte Verde</h5>
                             <!-- TEXTO DE EMPRESA REAL -->
